[metadata]
name = base
description = base app for Theaccounter
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Theaccounter/base
author = Theaccounter
maintainer = Theaccounter
platforms = OS Independent
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.7
install_requires =
    Django >= 2.2
    boto3==1.20.26
    django-storages==1.12.3

packages =
    base

[flake8]
max-line-length = 88
show-source = True

[isort]
profile = black